# interactionviz

./: README.md  pyproject.toml
interactionviz/cli/viewer/: __main__.py
interactionviz/gifwriter/: __init__.py  gifwriter.py
interactionviz/maps/: __init__.py  map.py  xml_loader.py
interactionviz/tracks/: __init__.py  tracks.py
interactionviz/viewers/: __init__.py  arcade.py  viewport.py  web.py
interactionviz/viewers/static/: app.js  index.html  style.css
tests/: test_interactionviz.py
