[tool.poetry]
name = "interactionviz"
version = "0.1.0"
description = "Pure Python viewer / renderer and loader for the INTERACTION dataset"
authors = ["Ross Hemsley <rlhemsley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
