[tool.poetry.scripts]
interactionviz = "interactionviz.cli.viewer.__main__:main"

[tool.poetry]
name = "interactionviz"
version = "0.2.0"
description = "Pure Python viewer / renderer / visualizer and loader for the INTERACTION dataset"
authors = ["Ross Hemsley <rlhemsley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.5"
numpy = "^1.19.2"
arcade = "^2.4.2"
click = "^7.1.2"
scipy = "^1.5.2"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
